<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="text_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_limite">Saldo + Limite:</string>
    <string name="txt_ver_extrato">Ver extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_cartaofinal">Cartão Final</string>
    <string name="transferir">Transferir</string>
    <string name="long_message">Você aceita receber as nossas novidades em seu celular?</string>
    <string name="decline">Não</string>
    <string name="accept">Sim</string>
</resources>